--- a/deep_research_with_bing_search.ipynb
+++ b/deep_research_with_bing_search.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
     "\n",
     "reasoningModel = OpenAIChatCompletionsModel(\n",
     "    model=os.getenv(\"reasoningModel\"), \n",
-    "    openai_client=openai_client,\n",
+    "    openai_client=openai_client\n",
     ")\n",
     "\n",
     "chatModel = OpenAIChatCompletionsModel(\n",
@@ -929,12 +929,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from agents import HandoffCallItem\n",
-    "# from openai.types.responses import ResponseFunctionToolCall\n",
     "\n",
     "def extract_research_report(final_answer):\n",
     "    # If final output is from ResearchAgent, get the report directly\n",
