--- a/deep_research_with_bing_search.ipynb
+++ b/deep_research_with_bing_search.ipynb
@@ -28,13 +28,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*conda env: ericsson-deep-research*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Environment Setup\n",
     "\n",
     "First, we'll set up our environment by importing necessary libraries and loading environment variables from a .env file. These environment variables contain configuration details such as API keys and endpoints for the Azure OpenAI and Bing Search services."
@@ -193,7 +186,7 @@
     "The research workflow is powered by two types of agents:\n",
     "\n",
     "1. **Azure AI Agents** - Created using Azure AI Projects for web search capabilities\n",
-    "2. **OpenAI Agents SDK** - For specialized research tasks\n",
+    "2. **OpenAI Agents** - For specialized research tasks\n",
     "\n",
     "Let's configure each type of agent with their specific instructions and capabilities."
    ]
