--- a/deep_research_with_bing_search.ipynb
+++ b/deep_research_with_bing_search.ipynb
@@ -750,24 +750,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Subtopics: 100%|██████████| 7/7 [05:24<00:00, 46.29s/it] \n"
+      "Subtopics:  29%|██▊       | 2/7 [01:38<04:07, 49.60s/it]"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "import json\n",
-    "from typing import List, Optional\n",
-    "from azure.ai.projects import AIProjectClient\n",
-    "from azure.ai.projects.models import MessageRole\n",
-    "from azure.identity import DefaultAzureCredential\n",
     "from tqdm import tqdm\n",
     "\n",
     "from common.utils_search import extract_agent_response_and_urls\n",
@@ -790,7 +785,7 @@
     "            thread = project_client.agents.create_thread()\n",
     "            message = project_client.agents.create_message(\n",
     "                thread_id=thread.id,\n",
-    "                role=MessageRole.USER,\n",
+    "                role=\"user\",\n",
     "                content=formatted_query,\n",
     "            )\n",
     "\n",
@@ -801,29 +796,6 @@
     "            )\n",
     "\n",
     "            agent_response_text, extracted_urls = extract_agent_response_and_urls(project_client, thread.id, query)\n",
-    "\n",
-    "            # extracted_urls = []\n",
-    "            # agent_response_text = \"\"\n",
-    "\n",
-    "            # messages = project_client.agents.list_messages(thread_id=thread.id) # Get all messages for inspection\n",
-    "            # last_agent_message = messages.get_last_message_by_role(role=MessageRole.AGENT)\n",
-    "\n",
-    "            # if last_agent_message:\n",
-    "            #     # Store the text response as well, might be useful context\n",
-    "            #     if last_agent_message.text_messages:\n",
-    "            #         agent_response_text = \"\\n\".join([tm.text.value for tm in last_agent_message.text_messages])\n",
-    "\n",
-    "            #     # Extract URLs from annotations\n",
-    "            #     if last_agent_message.url_citation_annotations:\n",
-    "            #         for annotation in last_agent_message.url_citation_annotations:\n",
-    "            #             if hasattr(annotation, 'url_citation') and annotation.url_citation:\n",
-    "            #                  extracted_urls.append({\n",
-    "            #                      \"title\": annotation.url_citation.title or \"No Title\", # Handle missing titles\n",
-    "            #                      \"url\": annotation.url_citation.url\n",
-    "            #                  })\n",
-    "            #             else:\n",
-    "            #                  print(f\"Warning: Annotation found without valid url_citation for query '{query}'\")\n",
-    "\n",
     "\n",
     "            # Add to our results collection\n",
     "            subtopic_results[\"queries\"].append({\n",
@@ -886,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -898,30 +870,11 @@
     }
    ],
    "source": [
-    "from tqdm import tqdm # Make sure tqdm is imported\n",
-    "from typing import List, Dict, Set, Tuple # For type hinting\n",
     "from common.utils_summary import collect_responses_and_citations\n",
     "\n",
     "mapped_chunks = []\n",
     "\n",
     "for subtopic_result in tqdm(search_results, desc=\"Summarizing subtopics\"):\n",
-    "    # all_agent_responses_for_subtopic: List[str] = []\n",
-    "    # unique_citations_for_subtopic: Set[Tuple[str, str]] = set() # Use a set for automatic uniqueness\n",
-    "\n",
-    "    # # --- Collect all agent responses and unique citations for the subtopic ---\n",
-    "    # for query_result in subtopic_result.get(\"queries\", []): # Use .get for safety\n",
-    "    #     # Append the agent's response if it exists\n",
-    "    #     agent_response = query_result.get(\"agent_response\")\n",
-    "    #     if agent_response:\n",
-    "    #         all_agent_responses_for_subtopic.append(agent_response)\n",
-    "\n",
-    "    #     # Collect unique citations from this query's results\n",
-    "    #     for result_item in query_result.get(\"results\", []): # Use .get for safety\n",
-    "    #         title = result_item.get(\"title\")\n",
-    "    #         url = result_item.get(\"url\")\n",
-    "    #         if title and url: # Ensure both title and url exist\n",
-    "    #             unique_citations_for_subtopic.add( (title, url) ) # Add tuple to set\n",
-    "\n",
     "    all_agent_responses_for_subtopic, unique_citations_for_subtopic = collect_responses_and_citations(subtopic_result)\n",
     "\n",
     "    # --- Summarize the combined agent responses ONCE per subtopic ---\n",
@@ -1013,11 +966,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from agents import HandoffCallItem\n",
+    "import json\n",
     "\n",
     "def extract_research_report(final_answer):\n",
     "    # If final output is from ResearchAgent, get the report directly\n",
