updated BingSearchAgent instructions

--- a/deep_research_with_bing_search.ipynb
+++ b/deep_research_with_bing_search.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,35 +237,15 @@
     "# bing_tool = BingGroundingTool(connection_id=bing_connection.id)\n",
     "\n",
     "# bing_search_agent = project_client.agents.create_agent(\n",
-    "#     name=\"BingSearchAgent\",\n",
+    "#     name=\"BingSearchAgentScorerV2\",\n",
     "#     description=\"Agent to perform web searches using Bing.\",\n",
-    "#     model=os.getenv(\"chatModel\"),\n",
+    "#     model=\"gpt-4o\",\n",
     "#     temperature=0.5,\n",
     "#     tools=bing_tool.definitions,\n",
-    "#     instructions=\"\"\"\n",
-    "# You are a web search assistant. When provided with a search query, \n",
-    "# use your web search tool (BingGroundingTool) to retrieve relevant results.\n",
-    "\n",
-    "# ALWAYS FORMAT YOUR RESPONSE AS VALID JSON FOLLOWING THIS EXACT STRUCTURE:\n",
-    "# {\n",
-    "#     \"subtopic\": \"the subtopic that was researched\",\n",
-    "#     \"query\": \"the actual search query you used\",\n",
-    "#     \"results\": [\n",
-    "#         {\n",
-    "#             \"title\": \"result title\",\n",
-    "#             \"full_text\": \"The complete content retrieved from the search result\",\n",
-    "#             \"url\": \"https://example.com/page\",\n",
-    "#             \"source\": \"name of the source (optional), if not available, use an empty string\",\n",
-    "#             \"published_date\": \"YYYY-MM-DD (optional), if not available, use an empty string\"\n",
-    "#         }\n",
-    "#     ]\n",
-    "# }\n",
-    "\n",
-    "# DO NOT include any text outside of this JSON structure.\n",
-    "# Ensure all JSON is properly formatted with quotes around keys and string values.\n",
-    "# For any optional fields that are unknown, use null instead of omitting the field.\n",
-    "\n",
-    "# Include at least 3 relevant results for each search.\"\"\"\n",
+    "#     instructions=\"\"\"You are a helpful research assistant. \n",
+    "# Use your available tools (like Bing web search) to find information relevant to the user's query.\n",
+    "# When you use information from a search result in your answer, please cite the source clearly using the tool's citation capabilities.\n",
+    "# Provide a comprehensive answer based on the search results.\"\"\"\n",
     "# )"
    ]
   },
@@ -750,14 +730,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Subtopics:  29%|██▊       | 2/7 [01:38<04:07, 49.60s/it]"
+      "Subtopics: 100%|██████████| 7/7 [05:16<00:00, 45.22s/it]\n"
      ]
     }
    ],
