BingSearchAgent name update

--- a/deep_research_with_bing_search.ipynb
+++ b/deep_research_with_bing_search.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "# bing_tool = BingGroundingTool(connection_id=bing_connection.id)\n",
     "\n",
     "# bing_search_agent = project_client.agents.create_agent(\n",
-    "#     name=\"BingSearchAgentScorerV2\",\n",
+    "#     name=\"BingSearchAgentV2\",\n",
     "#     description=\"Agent to perform web searches using Bing.\",\n",
     "#     model=\"gpt-4o\",\n",
     "#     temperature=0.5,\n",
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -744,11 +744,9 @@
    "source": [
     "import os\n",
     "from tqdm import tqdm\n",
-    "\n",
     "from common.utils_search import extract_agent_response_and_urls\n",
     "\n",
-    "\n",
-    "bing_search_agent = project_client.agents.get_agent(agent_id=os.getenv(\"bingSearchAgentScorerV2ID\"))\n",
+    "bing_search_agent = project_client.agents.get_agent(agent_id=os.getenv(\"bingSearchAgentV2ID\"))\n",
     "\n",
     "search_results = []\n",
     "\n",
