Adding more verbose comments

--- a/02_deep_research_with_bing_search_scraping.ipynb
+++ b/02_deep_research_with_bing_search_scraping.ipynb
@@ -36,6 +36,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Required Environment Variables\n",
+    "\n",
+    "This notebook requires the following environment variables in your `.env` file:\n",
+    "\n",
+    "```bash\n",
+    "# Azure OpenAI Configuration\n",
+    "AOAI_ENDPOINT=your_azure_openai_endpoint\n",
+    "AOAI_KEY=your_azure_openai_api_key\n",
+    "AOAI_API_VERSION=2024-02-01  # Optional, defaults to this value\n",
+    "\n",
+    "# Model Deployment Names\n",
+    "reasoningModel=your_reasoning_model_deployment_name  # e.g., o1-preview\n",
+    "chatModel=your_chat_model_deployment_name  # e.g., gpt-4o\n",
+    "\n",
+    "# Azure AI Projects Configuration\n",
+    "PROJECT_ENDPOINT=your_azure_ai_project_endpoint\n",
+    "\n",
+    "# Bing Search Agent (pre-created in Azure AI Foundry)\n",
+    "bingSearchAgentID=your_bing_search_agent_id\n",
+    "BING_CONNECTION_NAME=your_bing_connection_name  # Only needed if creating agent inline\n",
+    "```\n",
+    "\n",
+    "**Note:** This notebook extends notebook 01 by adding web scraping capabilities. Like notebook 01, it creates agents inline using the OpenAI Agents SDK, except for the Bing Search agent which must be pre-created in Azure AI Foundry."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -232,7 +261,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cell will ***create*** an **Azure AI Agent**, so you only need to run this cell **once**."
+    "### Creating the Bing Search Agent (One-time Setup)\n",
+    "\n",
+    "The following cell will **create** an **Azure AI Agent** with Bing Search capabilities. You only need to run this cell **once** to create the agent, then save its ID to your `.env` file as `bingSearchAgentID`.\n",
+    "\n",
+    "If you already have a Bing Search agent created, skip this cell and use the next cell to update its instructions instead."
    ]
   },
   {
@@ -274,7 +307,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you already have an Azure AI Agent, run this cell to update it's instructions with today's date."
+    "### Updating Existing Bing Search Agent\n",
+    "\n",
+    "If you already have a Bing Search agent (with its ID in your `.env` file), run this cell to update its instructions with today's date. This ensures the agent has current date awareness for time-sensitive queries."
    ]
   },
   {
@@ -318,7 +353,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**OpenAI Agents**"
+    "### Creating OpenAI Agents\n",
+    "\n",
+    "The following agents are created inline using the OpenAI Agents SDK:\n",
+    "- **PlannerAgent** - Creates research plans\n",
+    "- **WebScraperAgent** - Scrapes and filters web content (new in this notebook)\n",
+    "- **SummaryAgent** - Summarizes scraped content\n",
+    "- **ResearchAgent** - Generates comprehensive reports\n",
+    "- **PeerReviewAgent** - Provides quality feedback\n",
+    "\n",
+    "These agents are created fresh each time you run the notebook."
    ]
   },
   {
