--- a/03_deep_research_with_azure_ai_agents_only.ipynb
+++ b/03_deep_research_with_azure_ai_agents_only.ipynb
@@ -34,6 +34,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Required Environment Variables\n",
+    "\n",
+    "This notebook requires the following environment variables in your `.env` file:\n",
+    "\n",
+    "```bash\n",
+    "# Azure AI Projects Configuration\n",
+    "PROJECT_ENDPOINT=your_azure_ai_project_endpoint\n",
+    "\n",
+    "# Pre-created Agent IDs (must be created via common/create_azure_ai_agents.py)\n",
+    "PlannerAgentID=your_planner_agent_id\n",
+    "BingSearchAgentID=your_bing_search_agent_id\n",
+    "SummaryAgentID=your_summary_agent_id\n",
+    "ResearchAgentID=your_research_agent_id\n",
+    "PeerReviewAgentID=your_peer_review_agent_id\n",
+    "```\n",
+    "\n",
+    "**Note:** This notebook uses **pure Azure AI Agents** - all agents must be pre-created in Azure AI Foundry. Unlike notebooks 01 and 02, no agents are created inline. Run the agent creation cells below (commented out) once to create your agents, then use their IDs in subsequent runs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -83,7 +106,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cell will **create the Azure AI Agents**, so you only need to run this cell **once**."
+    "### Creating Azure AI Agents (One-time Setup)\n",
+    "\n",
+    "The following cell will **create all Azure AI Agents** required for this workflow. You only need to run this cell **once** to create the agents, then save their IDs to your `.env` file.\n",
+    "\n",
+    "After creating the agents, uncomment the fetch agents cell below and comment out this creation cell for subsequent runs."
    ]
   },
   {
@@ -111,7 +138,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fetch agents from your AI Foundry Project"
+    "### Fetch Agents from Azure AI Foundry\n",
+    "\n",
+    "Once you've created your agents (using the cell above), use this cell to retrieve them by their IDs from your `.env` file. This is the standard approach for working with pre-created Azure AI Agents."
    ]
   },
   {
@@ -131,7 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Update their system messages"
+    "### Update Agent Instructions\n",
+    "\n",
+    "This cell updates the system instructions for all agents with current date awareness and any refined prompts. Run this cell each time you want to ensure agents have the latest instructions, especially for date-sensitive queries."
    ]
   },
   {
