chore: adding az login

--- a/04_deep_research_with_agent_framework.ipynb
+++ b/04_deep_research_with_agent_framework.ipynb
@@ -48,6 +48,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "00abb31d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !az login"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "e4592cb0",
    "metadata": {},
@@ -145,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2025-11-03 16:46:27 - c:\\Users\\povelf\\AppData\\Local\\miniconda3\\envs\\deep-research\\Lib\\site-packages\\agent_framework\\_workflows\\_validation.py:520 - WARNING] Cycle detected in the workflow graph involving: to_routing_decision -> PeerReviewAgentMultiChoice -> research_report_executor -> summary_executor -> search_executor -> to_routing_decision. Ensure termination or iteration limits exist.\n"
+      "[2025-11-04 13:55:38 - c:\\Users\\povelf\\AppData\\Local\\miniconda3\\envs\\deep-research\\Lib\\site-packages\\agent_framework\\_workflows\\_validation.py:520 - WARNING] Cycle detected in the workflow graph involving: to_routing_decision -> PeerReviewAgentMultiChoice -> research_report_executor -> summary_executor -> search_executor -> to_routing_decision. Ensure termination or iteration limits exist.\n"
      ]
     }
    ],
@@ -269,30 +279,29 @@
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 22.26s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 25.31s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.59s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 30.08s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 24.57s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 35.64s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 27.50s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 21.16s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 30.29s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 34.03s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 32.86s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.52s\n",
       "[SearchExecutor] Completed 6 searches\n",
       "[SummaryExecutor] Summarizing 3 subtopics...\n",
       "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
       "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
       "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 35.25s\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 34.85s\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 38.87s\n",
+      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 38.50s\n",
+      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 36.98s\n",
+      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 41.03s\n",
       "[SummaryExecutor] Completed 3 summaries\n",
       "[ResearchReportExecutor] Initial report generation\n",
       "[ResearchReportMiddleware] 🚀 Agent ResearchReportAgent starting...\n",
-      "[ResearchReportMiddleware] ✅ Agent ResearchReportAgent completed in 86.83s\n",
+      "[ResearchReportMiddleware] ✅ Agent ResearchReportAgent completed in 97.36s\n",
       "[ResearchReportMiddleware]    Valid ComprehensiveResearchReport\n",
       "[ResearchReportExecutor] Stored latest report in shared state\n",
       "[PeerReviewMultiChoiceMiddleware] 🚀 Agent PeerReviewAgentMultiChoice starting...\n",
       "[RoutingDecision] Next action: complete\n",
       "[RoutingDecision] Is satisfactory: True\n",
-      "[RoutingDecision] Details: The report meets and exceeds quality standards for completeness, clarity, evidence, and insight. No ...\n",
       "[get_next_action] Checking complete == complete: True\n",
       "[HandleComplete] Report satisfactory - outputting final report\n",
       "\n",
