--- a/04_deep_research_with_agent_framework.ipynb
+++ b/04_deep_research_with_agent_framework.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "00abb31d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4592cb0",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d2795665",
    "metadata": {},
    "outputs": [],
@@ -147,18 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9ae18097",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2025-11-04 13:55:38 - c:\\Users\\povelf\\AppData\\Local\\miniconda3\\envs\\deep-research\\Lib\\site-packages\\agent_framework\\_workflows\\_validation.py:520 - WARNING] Cycle detected in the workflow graph involving: to_routing_decision -> PeerReviewAgentMultiChoice -> research_report_executor -> summary_executor -> search_executor -> to_routing_decision. Ensure termination or iteration limits exist.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Update all agent instructions with current date and refined prompts\n",
     "update_agent_instructions()\n",
@@ -198,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3097b1f6",
    "metadata": {},
    "outputs": [
@@ -234,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "11b3011c",
    "metadata": {},
    "outputs": [],
@@ -262,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9c66879a",
    "metadata": {},
    "outputs": [
@@ -271,6 +263,8 @@
      "output_type": "stream",
      "text": [
       "[ResearchPlanMiddleware] 🚀 Agent PlannerAgent starting...\n",
+      "[ResearchPlanMiddleware] ✅ Agent PlannerAgent completed in 9.15s\n",
+      "[ResearchPlanMiddleware]    Valid ResearchPlan with 3 tasks\n",
       "[SearchExecutor] Initial search execution from planner\n",
       "[SearchExecutor] Stored research plan in shared state (3 tasks, 6 queries)\n",
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
@@ -279,27 +273,30 @@
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
       "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 27.50s\n",
       "[SearchExecutor] ✅ Agent BingSearchAgent completed in 21.16s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 30.29s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 34.03s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 32.86s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.52s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 23.34s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 27.66s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.08s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 28.98s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 28.24s\n",
       "[SearchExecutor] Completed 6 searches\n",
       "[SummaryExecutor] Summarizing 3 subtopics...\n",
       "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
       "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
       "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 38.50s\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 36.98s\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 41.03s\n",
+      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 17.69s\n",
+      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 26.30s\n",
+      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 27.81s\n",
       "[SummaryExecutor] Completed 3 summaries\n",
       "[ResearchReportExecutor] Initial report generation\n",
       "[ResearchReportMiddleware] 🚀 Agent ResearchReportAgent starting...\n",
-      "[ResearchReportMiddleware] ✅ Agent ResearchReportAgent completed in 97.36s\n",
+      "[ResearchReportMiddleware] ✅ Agent ResearchReportAgent completed in 88.44s\n",
       "[ResearchReportMiddleware]    Valid ComprehensiveResearchReport\n",
       "[ResearchReportExecutor] Stored latest report in shared state\n",
       "[PeerReviewMultiChoiceMiddleware] 🚀 Agent PeerReviewAgentMultiChoice starting...\n",
+      "[PeerReviewMultiChoiceMiddleware] ✅ Agent PeerReviewAgentMultiChoice completed in 10.62s\n",
+      "[PeerReviewMultiChoiceMiddleware]    Valid PeerReviewFeedbackMultiChoice - Satisfactory\n",
+      "[PeerReviewMultiChoiceMiddleware]    Next action: complete\n",
       "[RoutingDecision] Next action: complete\n",
       "[RoutingDecision] Is satisfactory: True\n",
       "[get_next_action] Checking complete == complete: True\n",
@@ -336,7 +333,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "deep-research",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -350,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
