removing redundant middleware functionality

--- a/04_deep_research_with_agent_framework.ipynb
+++ b/04_deep_research_with_agent_framework.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "00abb31d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e4592cb0",
    "metadata": {},
    "outputs": [],
@@ -73,22 +73,19 @@
     "nest_asyncio.apply()\n",
     "\n",
     "# Agent Framework imports for workflow orchestration\n",
-    "from agent_framework import (\n",
-    "    WorkflowBuilder,\n",
-    "    Case,\n",
-    "    Default,\n",
-    "    WorkflowViz\n",
-    ")\n",
+    "from agent_framework import WorkflowBuilder, Case, Default\n",
     "\n",
     "# Project-specific imports\n",
     "from common.data_models import NextAction\n",
     "from maf.helper import save_report\n",
     "from maf.update_agent_instructions import update_agent_instructions\n",
-    "from maf.agents import planner_agent, peer_review_agent_multi_choice, cleanup_all_agents\n",
+    "from maf.agents import cleanup_all_agents\n",
     "from maf.nodes import (\n",
+    "    planner_executor,\n",
     "    search_executor,\n",
     "    summary_executor,\n",
     "    research_report_executor,\n",
+    "    peer_review_executor,\n",
     "    to_routing_decision,\n",
     "    get_next_action,\n",
     "    handle_complete,\n",
@@ -110,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d2795665",
    "metadata": {},
    "outputs": [],
@@ -147,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9ae18097",
    "metadata": {},
    "outputs": [],
@@ -158,13 +155,12 @@
     "# Build the workflow with declarative edge definitions\n",
     "workflow = (\n",
     "    WorkflowBuilder()\n",
-    "    .set_start_executor(planner_agent)\n",
-    "    .add_edge(planner_agent, search_executor)\n",
+    "    .set_start_executor(planner_executor)\n",
+    "    .add_edge(planner_executor, search_executor)\n",
     "    .add_edge(search_executor, summary_executor)\n",
     "    .add_edge(summary_executor, research_report_executor)\n",
-    "    .add_edge(research_report_executor, peer_review_agent_multi_choice)\n",
-    "    .add_edge(peer_review_agent_multi_choice, to_routing_decision)\n",
-    "    # Conditional routing based on peer review feedback\n",
+    "    .add_edge(research_report_executor, peer_review_executor)\n",
+    "    .add_edge(peer_review_executor, to_routing_decision)\n",
     "    .add_switch_case_edge_group(\n",
     "        to_routing_decision,\n",
     "        [\n",
@@ -190,28 +186,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3097b1f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating workflow visualization...\n",
-      "SVG file saved to: workflow_graph_agent_framework.svg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Generating workflow visualization...\")\n",
-    "viz = WorkflowViz(workflow)\n",
+    "# print(\"Generating workflow visualization...\")\n",
+    "# viz = WorkflowViz(workflow)\n",
     "\n",
-    "try:\n",
-    "    svg_file = viz.export(format=\"svg\", filename=\"workflow_graph_agent_framework.svg\")\n",
-    "    print(f\"SVG file saved to: {svg_file}\")\n",
-    "except ImportError:\n",
-    "    print(\"Tip: Install 'viz' extra to export workflow visualization: pip install agent-framework[viz] --pre\")"
+    "# try:\n",
+    "#     svg_file = viz.export(format=\"svg\", filename=\"workflow_graph_agent_framework.svg\")\n",
+    "#     print(f\"SVG file saved to: {svg_file}\")\n",
+    "# except ImportError:\n",
+    "#     print(\"Tip: Install 'viz' extra to export workflow visualization: pip install agent-framework[viz] --pre\")"
    ]
   },
   {
@@ -226,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "11b3011c",
    "metadata": {},
    "outputs": [],
@@ -254,59 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9c66879a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ResearchPlanMiddleware] 🚀 Agent PlannerAgent starting...\n",
-      "[ResearchPlanMiddleware] ✅ Agent PlannerAgent completed in 9.15s\n",
-      "[ResearchPlanMiddleware]    Valid ResearchPlan with 3 tasks\n",
-      "[SearchExecutor] Initial search execution from planner\n",
-      "[SearchExecutor] Stored research plan in shared state (3 tasks, 6 queries)\n",
-      "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] 🚀 Agent BingSearchAgent starting...\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 21.16s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 23.34s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 27.66s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.08s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 28.98s\n",
-      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 28.24s\n",
-      "[SearchExecutor] Completed 6 searches\n",
-      "[SummaryExecutor] Summarizing 3 subtopics...\n",
-      "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
-      "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
-      "[AgentMiddleware] 🚀 Agent SummaryAgent starting...\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 17.69s\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 26.30s\n",
-      "[AgentMiddleware] ✅ Agent SummaryAgent completed in 27.81s\n",
-      "[SummaryExecutor] Completed 3 summaries\n",
-      "[ResearchReportExecutor] Initial report generation\n",
-      "[ResearchReportMiddleware] 🚀 Agent ResearchReportAgent starting...\n",
-      "[ResearchReportMiddleware] ✅ Agent ResearchReportAgent completed in 88.44s\n",
-      "[ResearchReportMiddleware]    Valid ComprehensiveResearchReport\n",
-      "[ResearchReportExecutor] Stored latest report in shared state\n",
-      "[PeerReviewMultiChoiceMiddleware] 🚀 Agent PeerReviewAgentMultiChoice starting...\n",
-      "[PeerReviewMultiChoiceMiddleware] ✅ Agent PeerReviewAgentMultiChoice completed in 10.62s\n",
-      "[PeerReviewMultiChoiceMiddleware]    Valid PeerReviewFeedbackMultiChoice - Satisfactory\n",
-      "[PeerReviewMultiChoiceMiddleware]    Next action: complete\n",
-      "[RoutingDecision] Next action: complete\n",
-      "[RoutingDecision] Is satisfactory: True\n",
-      "[get_next_action] Checking complete == complete: True\n",
-      "[HandleComplete] Report satisfactory - outputting final report\n",
-      "\n",
-      "[Main] Cleaning up agent clients...\n",
-      "[Cleanup] All agent clients closed successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    events = await workflow.run(user_query)\n",
@@ -325,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acf2176e",
+   "id": "826140fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -333,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "deep-research",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
