chore: notebook output

--- a/04_deep_research_with_agent_framework.ipynb
+++ b/04_deep_research_with_agent_framework.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "00abb31d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e4592cb0",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d2795665",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ae18097",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3097b1f6",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "11b3011c",
    "metadata": {},
    "outputs": [],
@@ -244,14 +244,61 @@
    "execution_count": null,
    "id": "9c66879a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[AgentLoggingMiddleware] 🚀 PlannerAgent starting...\n",
+      "[AgentLoggingMiddleware] ✅ Agent PlannerAgent completed in 8.59s\n",
+      "[SearchExecutor] Initial search execution from planner\n",
+      "[SearchExecutor] Stored research plan in shared state (3 tasks, 6 queries)\n",
+      "[SearchExecutor] 🚀 search query started...\n",
+      "[SearchExecutor] 🚀 search query started...\n",
+      "[SearchExecutor] 🚀 search query started...\n",
+      "[SearchExecutor] 🚀 search query started...\n",
+      "[SearchExecutor] 🚀 search query started...\n",
+      "[SearchExecutor] 🚀 search query started...\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 22.81s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 21.46s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 26.95s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 21.21s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.57s\n",
+      "[SearchExecutor] ✅ Agent BingSearchAgent completed in 33.16s\n",
+      "[SearchExecutor] Completed 6 searches\n",
+      "[SummaryExecutor] Summarizing 3 subtopics...\n",
+      "[AgentLoggingMiddleware] 🚀 SummaryAgent starting...\n",
+      "[AgentLoggingMiddleware] 🚀 SummaryAgent starting...\n",
+      "[AgentLoggingMiddleware] 🚀 SummaryAgent starting...\n",
+      "[AgentLoggingMiddleware] ✅ Agent SummaryAgent completed in 23.28s\n",
+      "[AgentLoggingMiddleware] ✅ Agent SummaryAgent completed in 24.16s\n",
+      "[AgentLoggingMiddleware] ✅ Agent SummaryAgent completed in 25.80s\n",
+      "[SummaryExecutor] Completed 3 summaries\n",
+      "[ResearchReportExecutor] Initial report generation\n",
+      "[AgentLoggingMiddleware] 🚀 ResearchReportAgent starting...\n",
+      "[AgentLoggingMiddleware] ✅ Agent ResearchReportAgent completed in 88.39s\n",
+      "[ResearchReportExecutor] Stored latest report in shared state\n",
+      "[PeerReviewExecutor] Evaluating research report quality...\n",
+      "[AgentLoggingMiddleware] 🚀 PeerReviewAgentMultiChoice starting...\n",
+      "[AgentLoggingMiddleware] ✅ Agent PeerReviewAgentMultiChoice completed in 11.36s\n",
+      "[RoutingDecision] Next action: complete\n",
+      "[RoutingDecision] Is satisfactory: True\n",
+      "[RoutingDecision] Details: The report exceeds the success criteria and requires no substantive revisions. Minor suggestions for...\n",
+      "[get_next_action] Checking complete == complete: True\n",
+      "[HandleComplete] Report satisfactory - outputting final report\n",
+      "\n",
+      "[Main] Cleaning up agent clients...\n",
+      "[Cleanup] All agent clients closed successfully\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    events = await workflow.run(user_query)\n",
     "    outputs = events.get_outputs()\n",
     "    final_report = outputs[0]   \n",
     "    save_report(final_report)\n",
-    "    \n",
+    "\n",
     "except Exception as e:\n",
     "    print(f\"Error during workflow execution: {e}\")\n",
     "    raise\n",
