--- a/04_deep_research_with_agent_framework.ipynb
+++ b/04_deep_research_with_agent_framework.ipynb
@@ -129,11 +129,11 @@
     "\n",
     "The workflow orchestrates multiple agents in a research pipeline:\n",
     "\n",
-    "1. **PlannerAgent** → Creates research plan with subtopics and queries\n",
+    "1. **PlannerExecutor** → Creates research plan with subtopics and queries\n",
     "2. **SearchExecutor** → Executes Bing searches for each query\n",
     "3. **SummaryExecutor** → Summarizes search results\n",
     "4. **ResearchReportExecutor** → Generates comprehensive report\n",
-    "5. **PeerReviewAgent** → Evaluates report quality and decides next action\n",
+    "5. **PeerReviewExecutor** → Evaluates report quality and decides next action\n",
     "6. **RoutingDecision** → Routes to completion, revision, or more data gathering\n",
     "\n",
     "The peer review agent uses multi-choice output to determine the workflow path:\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9c66879a",
    "metadata": {},
    "outputs": [
